Refactor code to remove unused portions and general cleanup